2006-12-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/src/rinterface.c (R_igraph_laplacian) :
	bug corrected

2006-12-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/src/rinterface.c 
	(R_igraph_get_all_shortest_paths) : memory leak corrected
	(R_igraph_neighborhood, R_igraph_neighborhood_graphs) : bug corrected

	* interfaces/R/igraph/R/games.c (preference.game)
	(asymmetric.preference.game) : 'PACKAGE' argument added to .Call

2006-12-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/igraph/games,R (preference.game)
	(asymmetric.preference.game) : added
	* interfaces/R/igraph/R/src/rinterface.c 
	(R_igraph_preference_game, R_igraph_asymmetric_preference_game) :
	added

	* interfaces/R/igraph/R/igraph/structural.properties.R 
	(graph.laplacian) : updated to use the C version
	* interfaces/R/src/rinterface.c (R_igraph_laplacian) : added

2006-11-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (transitivity) :
	added local average type
	* interfaces/R/src/rinterface.c 
	(R_igraph_transitivity_avglocal_undirected) : added

2006-11-24  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structural.properties.R (neighborhood.size)
	(neighborhood, graph.neighborhood) : added
	* interfaces/R/src/rinterface.c (R_igraph_neighborhood_size)
	(R_igraph_neighborhood, R_igraph_neighborhood_graphs) : added
	

2006-11-19  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structural.properties.R (transitivity) :
	slightly rewritten, updated, more types are supported now
	* interfaces/R/src/rinterface.c (R_igraph_transitivity) : removed
	(R_igraph_transitivity_undirected)
	(R_igraph_transitivity_local_undirected) : added
	

2006-11-18  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/components.R (no.clusters) : added
	* interfaces/R/src/rinterface.c (R_igraph_no_clusters) : added

	* interfaces/R/igraph/R/minimum.spannin.tree.R (minimum.spanning.tree)