@@ -1,3 +1,0 @@
-
-igraph.i.have.fmemopen <- 1
-igraph.i.have.open.memstream <- 1
