@@ -619,11 +619,14 @@ int igraph_grg_game(igraph_t *graph, igraph_integer_t nodes,
 int igraph_preference_game(igraph_t *graph, igraph_integer_t nodes,
 			   igraph_integer_t types, igraph_vector_t *type_dist,
 			   igraph_matrix_t *pref_matrix,
+			   igraph_vector_t *node_type_vec,
 			   igraph_bool_t directed, igraph_bool_t loops);
 int igraph_asymmetric_preference_game(igraph_t *graph, igraph_integer_t nodes,
 				      igraph_integer_t types,
 				      igraph_matrix_t *type_dist_matrix,
 				      igraph_matrix_t *pref_matrix,
+				      igraph_vector_t *node_type_in_vec,
+				      igraph_vector_t *node_type_out_vec,
 				      igraph_bool_t loops);
 
 
